clients/ffi/include/tarwyn.h

typedef struct Handle Handle;
int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value);
int xt_publish_bool(const struct Handle *handle, const char *channel, bool value);
int xt_publish_string(const struct Handle *handle, const char *channel, const char *value);
int xt_publish_bytes(const struct Handle *handle,
                     const char *channel,
                     const uint8_t *value,
                     size_t len);
int xt_get_bytes(const struct Handle *handle,
                 const char *channel,
                 uint8_t *out,
                 size_t capacity,
                 size_t *out_len);
int xt_subscribe_ring(struct Handle *handle,
                      const char *channel,
                      size_t records,
                      size_t record_bytes,
                      uint64_t *out_id);
int xt_unsubscribe(struct Handle *handle, uint64_t id);