clients/java-client/gen/tarwyn/ffi/tarwyn_h.java


    /**
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static int xt_publish_int64(MemorySegment handle, MemorySegment channel, long value) {
        var mh$ = xt_publish_int64.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_int64", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_bool {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_bool");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static FunctionDescriptor xt_publish_bool$descriptor() {
        return xt_publish_bool.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static MethodHandle xt_publish_bool$handle() {
        return xt_publish_bool.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static MemorySegment xt_publish_bool$address() {
        return xt_publish_bool.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_bool(const struct Handle *handle, const char *channel, bool value)
     * }
     */
    public static int xt_publish_bool(MemorySegment handle, MemorySegment channel, boolean value) {
        var mh$ = xt_publish_bool.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_bool", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static FunctionDescriptor xt_publish_string$descriptor() {
        return xt_publish_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static MethodHandle xt_publish_string$handle() {
        return xt_publish_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static MemorySegment xt_publish_string$address() {
        return xt_publish_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_string(const struct Handle *handle, const char *channel, const char *value)
     * }
     */
    public static int xt_publish_string(MemorySegment handle, MemorySegment channel, MemorySegment value) {
        var mh$ = xt_publish_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_string", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_bytes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_bytes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static FunctionDescriptor xt_publish_bytes$descriptor() {
        return xt_publish_bytes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static MethodHandle xt_publish_bytes$handle() {
        return xt_publish_bytes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static MemorySegment xt_publish_bytes$address() {
        return xt_publish_bytes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_bytes(const struct Handle *handle, const char *channel, const uint8_t *value, size_t len)
     * }
     */
    public static int xt_publish_bytes(MemorySegment handle, MemorySegment channel, MemorySegment value, long len) {
        var mh$ = xt_publish_bytes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_bytes", handle, channel, value, len);
            }
            return (int)mh$.invokeExact(handle, channel, value, len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_bytes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_bytes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_bytes(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_bytes$descriptor() {
        return xt_get_bytes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_bytes(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_bytes$handle() {
        return xt_get_bytes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_bytes(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_bytes$address() {
        return xt_get_bytes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_bytes(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static int xt_get_bytes(MemorySegment handle, MemorySegment channel, MemorySegment out, long capacity, MemorySegment out_len) {
        var mh$ = xt_get_bytes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_bytes", handle, channel, out, capacity, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, capacity, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_subscribe_ring {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_subscribe_ring");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static FunctionDescriptor xt_subscribe_ring$descriptor() {
        return xt_subscribe_ring.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static MethodHandle xt_subscribe_ring$handle() {
        return xt_subscribe_ring.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static MemorySegment xt_subscribe_ring$address() {
        return xt_subscribe_ring.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_subscribe_ring(struct Handle *handle, const char *channel, size_t records, size_t record_bytes, uint64_t *out_id)
     * }
     */
    public static int xt_subscribe_ring(MemorySegment handle, MemorySegment channel, long records, long record_bytes, MemorySegment out_id) {
        var mh$ = xt_subscribe_ring.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_subscribe_ring", handle, channel, records, record_bytes, out_id);
            }
            return (int)mh$.invokeExact(handle, channel, records, record_bytes, out_id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_unsubscribe {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_unsubscribe");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_unsubscribe(struct Handle *handle, uint64_t id)
     * }
     */
    public static FunctionDescriptor xt_unsubscribe$descriptor() {
        return xt_unsubscribe.DESC;
    }
